"Updated index.html, output.css, package-lock.json, and style.css files with various changes to HTML structure, CSS classes, and animations."

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#" class="inline text-[2rem] md:hidden" x><i class='bx bx-menu'></i></a>
         <!-- Menu options -->
         <ul class="hidden md:block space-x-4 lg:space-x-11">
-            <li class="inline-block "><a href="#" class="text-[13px] lg:text-[15px]">Featureslll</a></li>
+            <li class="inline-block "><a href="#" class="text-[13px] lg:text-[15px]">Features</a></li>
             <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Pricing</a></li>
             <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Themes</a></li>
             <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Integrations</a></li>
@@ -43,10 +43,10 @@
             </p>
             <div class="flex flex-col sm:flex-row gap-4 sm:gap-10 items-center">
                 <button
-                    class="bg-[#01EE65] flex items-center py-[17px] px-[36px] md:p-4 border border-solid border-black rounded-[30px] my-4 sm:my-10">
+                    class="sign-btn flex items-center py-[17px] px-[36px] md:p-4 border border-solid border-black rounded-[30px] my-4 sm:my-10">
                     Sign up - it's free
                 </button>
-                <button class="flex items-center p-4 border border-solid border-black rounded-[30px] h-max">
+                <button class="demo-btn flex items-center p-4 border border-solid border-black rounded-[30px] h-max">
                     Schedule a free demo
                 </button>
             </div>
@@ -106,14 +106,14 @@
                 </div>
                 <!-- Button -->
                 <a href="#"
-                    class="text-white mt-8 rounded-full border border-[#cdddd5] py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
+                    class="store-btn text-white mt-8 rounded-full border border-[#cdddd55b] duration-500 py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
                     Build an online store today
                 </a>
             </div>
 
             <!-- Image section 1 -->
             <div class="flex justify-center mt-16">
-                <img src="./Images/templates-1.jpg" alt="Ecommerce Themes" class="w-full md:w-2/3 lg:w-1/2">
+                <img src="./Images/templates-1.jpg" alt="Ecommerce Themes" class="hover:scale-110 duration-700 ease-in-out w-full md:w-2/3 lg:w-1/2">
             </div>
             <!-- Text section 1 -->
             <div class="mt-10">
@@ -130,7 +130,7 @@
 
             <!-- Image section 2 -->
             <div class="flex justify-center mt-16">
-                <img src="./Images/sitebuilder.png" alt="Ecommerce Themes" class="w-full md:w-2/3 lg:w-1/2">
+                <img src="./Images/sitebuilder.png" alt="Ecommerce Themes" class="hover:scale-110 duration-700 ease-in-out w-full md:w-2/3 lg:w-1/2">
             </div>
             <!-- Text section 2 -->
             <div class="mt-10">
@@ -147,7 +147,7 @@
 
             <!-- Image section 3 -->
             <div class="flex justify-center mt-16">
-                <img src="./Images/visual-editor.png" alt="Ecommerce Themes" class="w-full md:w-2/3 lg:w-1/2">
+                <img src="./Images/visual-editor.png" alt="Ecommerce Themes" class="hover:scale-110 duration-700 ease-in-out w-full md:w-2/3 lg:w-1/2">
             </div>
             <!-- Text section 3 -->
             <div class="mt-10">
@@ -164,7 +164,7 @@
 
             <!-- Image section 4 -->
             <div class="flex justify-center mt-16">
-                <img src="./Images/products.png" alt="Ecommerce Themes" class="w-full md:w-2/3 lg:w-1/2">
+                <img src="./Images/products.png" alt="Ecommerce Themes" class="hover:scale-110 duration-700 ease-in-out w-full md:w-2/3 lg:w-1/2">
             </div>
             <!-- Text section 4 -->
             <div class="mt-10">
