--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <a href="#" class="inline text-[2rem] md:hidden" x><i class='bx bx-menu'></i></a>
         <!-- Menu options -->
         <ul class="hidden md:block space-x-4 lg:space-x-11">
-            <li class="inline-block "><a href="#" class="text-[13px] lg:text-[15px]">Features</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Pricing</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Themes</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Integrations</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Customers</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Resources</a></li>
-            <li class="inline-block"><a href="#" class="text-[13px] lg:text-[15px]">Support</a></li>
+            <li class="inline-block "><a href="#" class="move text-[13px] lg:text-[15px]">Features</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Pricing</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Themes</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Integrations</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Customers</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Resources</a></li>
+            <li class="inline-block"><a href="#" class="move text-[13px] lg:text-[15px]">Support</a></li>
         </ul>
     </nav>
     <!-- First page -->
@@ -106,7 +106,7 @@
                 </div>
                 <!-- Button -->
                 <a href="#"
-                    class="store-btn text-white mt-8 rounded-full border border-[#cdddd55b] duration-500 py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
+                    class="store-btn hover:border-white duration-500 text-white mt-8 rounded-full border border-[#cdddd55b] py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
                     Build an online store today
                 </a>
             </div>
@@ -210,8 +210,7 @@
                 </div>
 
                 <a href="#"
-                    class="text-black max-md:w-[40%] mt-6 md:mt-0 rounded-[30px] border-[1px] border-[#cdddd5] py-4 px-7 lg:mx-10">Start
-                    selling in style</a>
+                    class="store-btn hover:border-black duration-500 text-black max-md:w-[40%] mt-6 md:mt-0 rounded-[30px] border-[1px] border-[#cdddd5] py-4 px-7 lg:mx-10">Start selling in style</a>
 
             </div>
             <!-- Advertisement cards -->
@@ -340,7 +339,7 @@
             <div class="flex flex-col lg:flex-row justify-between py-8 gap-4">
                 <!-- 1st large button -->
                 <a href="#"
-                    class="w-full lg:w-[30%] border-[1px] border-[#cdddd5] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Send us an email</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -350,7 +349,7 @@
                 </a>
                 <!-- 2nd large button -->
                 <a href="#"
-                    class="w-full lg:w-[30%] border-[1px] border-[#cdddd5] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Request a call back</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -360,7 +359,7 @@
                 </a>
                 <!-- 3rd large button -->
                 <a href="#"
-                    class="w-full lg:w-[30%] border-[1px] border-[#cdddd5] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Schedule a free demo</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -436,8 +435,7 @@
                 <h1 class="text-white text-[32px] md:text-[47px] font-bold mb-10 md:mb-6">What better day to start doing
                     business with the internet?</h1>
                 <a href="#"
-                    class="block w-full max-w-xs md:max-w-md border-[1px] border-black bg-green-500 hover:bg-green-400 text-white font-bold p-5 md:p-10 rounded-full transition duration-300 ease-in-out">Start
-                    today with Zoho Commerce</a>
+                    class="store-btn hover:border-black duration-500 block w-full max-w-xs md:max-w-md border-[1px] border-black bg-green-500  text-white font-bold p-5 md:p-10 rounded-full">Start today with Zoho Commerce</a>
             </div>
             <!-- Right Image -->
             <div class="hidden md:block absolute bottom-0 right-0 w-[80px] md:w-[133px] ">
@@ -449,14 +447,14 @@
     <section class="bg-black py-[60px]">
         <!-- Images at the footer -->
         <div class="flex flex-col justify-center items-center pb-10">
-            <a href="#" class="block mb-3 mx-auto max-w-[350px]">
+            <a href="#" class="hover:scale-[1.05] duration-700 ease-in-out transition-all block mb-3 mx-auto max-w-[350px]">
                 <img src="./Images/zoho-commerce-demo-footer.jpg" alt="Demo Image" class="w-full h-auto object-cover">
             </a>
-            <a href="#" class="block mb-3 mx-auto max-w-[350px]">
+            <a href="#" class="hover:scale-[1.05] duration-700 ease-in-out transition-all block mb-3 mx-auto max-w-[350px]">
                 <img src="./Images/zoho-commerce-youtube-footer.jpg" alt="YouTube Image"
                     class="w-full h-auto object-cover">
             </a>
-            <a href="#" class="block mb-3 mx-auto max-w-[350px]">
+            <a href="#" class="hover:scale-[1.05] duration-700 ease-in-out transition-all block mb-3 mx-auto max-w-[350px]">
                 <img src="./Images/zoho-survey-banner.jpg" alt="Survey Banner Image" class="w-full h-auto object-cover">
             </a>
         </div>
