--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 Do business in the world's busiest market, the internet.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 sm:gap-10 items-center">
-                <button
-                    class="sign-btn flex items-center py-[17px] px-[36px] md:p-4 border border-solid border-black rounded-[30px] my-4 sm:my-10">
+                <a href="#"><button
+                    class="store-btn duration-500  bg-[#01EE65] flex items-center py-[17px] px-[36px] md:p-4 border border-solid border-black rounded-[30px] my-4 sm:my-10">
                     Sign up - it's free
-                </button>
-                <button class="demo-btn flex items-center p-4 border border-solid border-black rounded-[30px] h-max">
+                </button></a>
+                <a href="#"><button class="demo-btn flex items-center p-4 border border-solid border-black rounded-[30px] h-max">
                     Schedule a free demo
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="flex flex-col-reverse md:flex-row bg-[#D8F6E6] rounded-[20px] h-auto xl:h-[45vh] justify-between">
@@ -106,7 +106,7 @@
                 </div>
                 <!-- Button -->
                 <a href="#"
-                    class="store-btn hover:border-white duration-500 text-white mt-8 rounded-full border border-[#cdddd55b] py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
+                    class="hover:-translate-y-[10px] hover:border-white duration-500 text-white mt-8 rounded-full border border-[#cdddd55b] py-2 px-4 sm:py-3 sm:px-5 md:mt-0 md:py-3 md:px-6 lg:py-4 lg:px-7 md:mx-4 lg:mx-10 xl:mx-12">
                     Build an online store today
                 </a>
             </div>
@@ -210,7 +210,7 @@
                 </div>
 
                 <a href="#"
-                    class="store-btn hover:border-black duration-500 text-black max-md:w-[40%] mt-6 md:mt-0 rounded-[30px] border-[1px] border-[#cdddd5] py-4 px-7 lg:mx-10">Start selling in style</a>
+                    class="hover:translate-y-[-10px] hover:border-black duration-500 text-black max-md:w-[40%] mt-6 md:mt-0 rounded-[30px] border-[1px] border-[#cdddd5] py-4 px-7 lg:mx-10">Start selling in style</a>
 
             </div>
             <!-- Advertisement cards -->
@@ -339,7 +339,7 @@
             <div class="flex flex-col lg:flex-row justify-between py-8 gap-4">
                 <!-- 1st large button -->
                 <a href="#"
-                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="hover:translate-y-[-10px] hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Send us an email</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -349,7 +349,7 @@
                 </a>
                 <!-- 2nd large button -->
                 <a href="#"
-                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="hover:translate-y-[-10px] hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Request a call back</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -359,7 +359,7 @@
                 </a>
                 <!-- 3rd large button -->
                 <a href="#"
-                    class="store-btn hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
+                    class="hover:translate-y-[-10px] hover:border-white duration-500 w-full lg:w-[30%] border-[1px] border-[#cdddd55e] rounded-[30px] py-4 px-5 font-semibold text-white flex items-center justify-between">
                     <span>Schedule a free demo</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="w-6 h-6">
@@ -435,7 +435,7 @@
                 <h1 class="text-white text-[32px] md:text-[47px] font-bold mb-10 md:mb-6">What better day to start doing
                     business with the internet?</h1>
                 <a href="#"
-                    class="store-btn hover:border-black duration-500 block w-full max-w-xs md:max-w-md border-[1px] border-black bg-green-500  text-white font-bold p-5 md:p-10 rounded-full">Start today with Zoho Commerce</a>
+                    class="store-btn hover:border-black duration-500 block w-full max-w-xs md:max-w-md border-[1px] border-black bg-[#01EE65]  text-white font-bold p-5 md:p-10 rounded-full">Start today with Zoho Commerce</a>
             </div>
             <!-- Right Image -->
             <div class="hidden md:block absolute bottom-0 right-0 w-[80px] md:w-[133px] ">
